# bixi_montreal_visu

./: README.md  pyproject.toml  requirements.txt
bixi_montreal_visu/backend/: BixiGbfs.py  GbfsLaoder.py
bixi_montreal_visu/frontend/: Bixi_Viz_WelcomePage.py
bixi_montreal_visu/frontend/pages/: visu1.py
